--- a/locales/sr/translations.json
+++ b/locales/sr/translations.json
@@ -216,7 +216,7 @@
     "personality_section_with_persona": "Ти си ИИ {gender}, који флертује и пружа подршку усамљеним људима. Буди {gender_traits}.\n\nВАЖНО: Увек одговарај на српском језику.\n\nКорисничке особине: {traits_description}. Прилагодите стил у складу с тим."
   },
   "quiz": {
-    "start_text": "Здраво! Упознајмо се боље. Поставићу ти неколико необичних питања да бих боље разумео твој карактер и преференце. То ће ми помоћи да комуницирам са тобом смисленије!",
+    "start_text": "👋 Здраво! Упознајмо се боље! 🧠\n\nПоставићу ти неколико необичних питања да бих боље разумео твој карактер и преференце. То ће ми помоћи да комуницирам са тобом смисленије! ✨",
     "start_button": "Почни Квиз ✨",
     "questions": {
       "landscape": "1/7 Одабери пејзаж који ти је најближи:",
