--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -234,7 +234,7 @@
     }
   },
   "quiz": {
-    "start_text": "Привет! Давай познакомимся поближе. Я задам тебе несколько необычных вопросов, чтобы лучше понять твой характер и предпочтения. Это поможет мне общаться с тобой более осмысленно!",
+    "start_text": "👋 Привет! Давай познакомимся поближе! 🧠\n\nЯ задам тебе несколько необычных вопросов, чтобы лучше понять твой характер и предпочтения. Это поможет мне общаться с тобой более осмысленно! ✨",
     "start_button": "Начать квиз ✨",
     "questions": {
       "landscape": "1/7 Выбери пейзаж, который тебе ближе:",
