refactoring, small improvements

--- a/locales/de/translations.json
+++ b/locales/de/translations.json
@@ -190,8 +190,8 @@
     "choose_male": "Junge 😉",
     "female": "Mädchen 😊",
     "male": "Junge 😉",
-    "buy_premium": "Premium kaufen 💳",
-    "extend_premium": "Premium verlängern 💳",
+    "buy_premium": "💳 Premium kaufen",
+    "extend_premium": "💳 Premium verlängern",
     "pay": "💳 Bezahlen",
     "yes_change": "Ja, Geschlecht ändern",
     "cancel": "Abbrechen",
