--- a/locales/es/translations.json
+++ b/locales/es/translations.json
@@ -188,8 +188,8 @@
     "choose_male": "Chico 😉",
     "female": "Chica 😊",
     "male": "Chico 😉",
-    "buy_premium": "Comprar premium 💳",
-    "extend_premium": "Extender premium 💳",
+    "buy_premium": "💳 Comprar premium",
+    "extend_premium": "💳 Extender premium",
     "pay": "💳 Pagar",
     "yes_change": "Sí, cambiar género",
     "cancel": "Cancelar",
