--- a/locales/fr/translations.json
+++ b/locales/fr/translations.json
@@ -86,8 +86,8 @@
     "read_disclaimer": "Lire l'avis de non-responsabilité",
     "choose_female": "Fille",
     "choose_male": "Garçon",
-    "buy_premium": "💎 Acheter Premium",
-    "extend_premium": "💎 Prolonger Premium",
+    "buy_premium": "💳 Acheter Premium",
+    "extend_premium": "💳 Prolonger Premium",
     "yes": "Oui",
     "no": "Non",
     "female": "Fille",
