--- a/locales/it/translations.json
+++ b/locales/it/translations.json
@@ -84,8 +84,8 @@
     "read_privacy": "Leggi la politica sulla privacy",
     "choose_female": "Ragazza",
     "choose_male": "Ragazzo",
-    "buy_premium": "💎 Compra Premium",
-    "extend_premium": "💎 Estendi Premium",
+    "buy_premium": "💳 Compra Premium",
+    "extend_premium": "💳 Estendi Premium",
     "yes": "Sì",
     "no": "No",
     "female": "Ragazza",
