--- a/locales/pl/translations.json
+++ b/locales/pl/translations.json
@@ -84,8 +84,8 @@
     "read_privacy": "Przeczytaj politykę prywatności",
     "choose_female": "Dziewczyna",
     "choose_male": "Chłopak",
-    "buy_premium": "💎 Kup Premium",
-    "extend_premium": "💎 Przedłuż Premium",
+    "buy_premium": "💳 Kup Premium",
+    "extend_premium": "💳 Przedłuż Premium",
     "yes": "Tak",
     "no": "Nie",
     "female": "Dziewczyna",
