--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -193,8 +193,8 @@
     "choose_male": "Молодой человек 😉",
     "female": "Девушка 😊",
     "male": "Молодой человек 😉",
-    "buy_premium": "Купить премиум 💳",
-    "extend_premium": "Продлить премиум 💳",
+    "buy_premium": "💳 Купить премиум",
+    "extend_premium": "💳 Продлить премиум",
     "pay": "💳 Оплатить",
     "yes_change": "Да, сменить пол",
     "cancel": "Отмена",
