--- a/locales/sr/translations.json
+++ b/locales/sr/translations.json
@@ -188,8 +188,8 @@
     "choose_male": "Младић 😉",
     "female": "Девојка 😊",
     "male": "Младић 😉",
-    "buy_premium": "Купи премијум 💳",
-    "extend_premium": "Продужи премијум 💳",
+    "buy_premium": "💳 Купи премијум",
+    "extend_premium": "💳 Продужи премијум",
     "pay": "💳 Плати",
     "yes_change": "Да, промени пол",
     "cancel": "Откажи",
