--- a/locales/tr/translations.json
+++ b/locales/tr/translations.json
@@ -84,8 +84,8 @@
     "read_privacy": "Gizlilik politikasını oku",
     "choose_female": "Kız",
     "choose_male": "Erkek",
-    "buy_premium": "💎 Premium Satın Al",
-    "extend_premium": "💎 Premium Uzat",
+    "buy_premium": "💳 Premium Satın Al",
+    "extend_premium": "💳 Premium Uzat",
     "yes": "Evet",
     "no": "Hayır",
     "female": "Kız",
