--- a/locales/en/translations.json
+++ b/locales/en/translations.json
@@ -193,8 +193,8 @@
     "choose_male": "Young man 😉",
     "female": "Girl 😊",
     "male": "Young man 😉",
-    "buy_premium": "Buy premium 💳",
-    "extend_premium": "Extend premium 💳",
+    "buy_premium": "💳 Buy premium",
+    "extend_premium": "💳 Extend premium",
     "pay": "💳 Pay",
     "yes_change": "Yes, change gender",
     "cancel": "Cancel",
