--- a/locales/sr/translations.json
+++ b/locales/sr/translations.json
@@ -25,7 +25,7 @@
       "language_command": "/language - Језик",
       "quiz_command": "/quiz - Упознајмо се",
       "restart_command": "/restart - Рестарт бота",
-      "stop_command": "/stop - Заустави бота",
+      "delete_me_command": "/delete_me - Потпуно брисање података",
       "communication_title": "💬 Комуникација:",
       "free_limit": "• Бесплатно: {free_limit} порука дневно",
       "premium_unlimited": "• Премијум: неограничена комуникација.",
@@ -51,17 +51,17 @@
       "success": "✅ <b>Бот рестартован!</b>\n\nСви подаци обрисани. Почињемо поново...",
       "cancelled": "❌ Рестарт отказан"
     },
-    "stop": {
-      "confirmation": "🛑 <b>Зауставити бота</b>\n\nДа ли сте сигурни да желите зауставити бота?\n\n<b>Сви ваши подаци ће бити обрисани:</b>\n• Историја ћаскања\n• Подешавања\n• Кеш\n\nОва радња се не може опозвати!",
-      "success": "👋 <b>Бот заустављен</b>\n\nСви подаци обрисани. Довиђења!\n\n😢 Жао нам је што одлазите. Чекаћемо ваш повратак!",
-      "cancelled": "❌ Заустављање отказано"
+    "delete_me": {
+      "confirmation": "🗑️ <b>Потпуно Брисање Података</b>\n\nДа ли сте сигурни да желите потпуно обрисати све своје податке?\n\n<b>Биће обрисани ТРАЈНО:</b>\n• Историја ћаскања\n• Подешавања\n• 💎 <b>Премијум Претплата</b>\n• Кеш\n• Сви лични подаци\n\n⚠️ Ова радња се не може опозвати!",
+      "success": "👋 <b>Подаци Обрисани</b>\n\nСви ваши подаци су потпуно обрисани из система.\n\n😢 Жао нам је што одлазите. Чекаћемо ваш повратак!\n\n💡 Ако будете хтели да почнете испочетка, притисните /start",
+      "cancelled": "❌ Брисање отказано"
     }
   },
   "consent": {
     "request": "Молимо да се сложиш са политиком приватности:",
     "agreed": "Хвала на сагласности! Имаш {free_limit} бесплатних порука дневно. Изабери пол сапутника:",
     "privacy_title": "🔐 Политика приватности",
-    "privacy_text": "Овде је ваш текст политике приватности...\n\nПуна верзија: https://yourwebsite.com/privacy"
+    "privacy_text": "🔒 Чувамо само неопходне податке да би бот радио исправно.\n\n📋 Више детаља у нашој Политици приватности:\n\n🔗 https://mindlythica-neurivantis-ai-bot-priv.netlify.app"
   },
   "gender": {
     "choose": "Изабери пол сапутника:",
@@ -185,9 +185,9 @@
     "agree_privacy": "Слажем се са политиком приватности",
     "read_privacy": "Читај политику",
     "choose_female": "Девојка 😊",
-    "choose_male": "Младић 😉",
+    "choose_male": "Момак 😉",
     "female": "Девојка 😊",
-    "male": "Младић 😉",
+    "male": "Момак 😉",
     "buy_premium": "💳 Купи премијум",
     "extend_premium": "💳 Продужи премијум",
     "pay": "💳 Плати",
