--- a/locales/fr/translations.json
+++ b/locales/fr/translations.json
@@ -25,7 +25,7 @@
       "language_command": "/language - Langue",
       "quiz_command": "/quiz - Faire connaissance",
       "restart_command": "/restart - Redémarrer le bot",
-      "stop_command": "/stop - Arrêter le bot",
+      "delete_me_command": "/delete_me - Suppression complète des données",
       "communication_title": "💬 Communication :",
       "free_limit": "• Gratuit : {free_limit} messages par jour",
       "premium_unlimited": "• Premium : communication illimitée.",
@@ -51,17 +51,17 @@
       "success": "✅ <b>Bot redémarré !</b>\n\nToutes les données ont été effacées. Recommençons...",
       "cancelled": "❌ Redémarrage annulé"
     },
-    "stop": {
-      "confirmation": "🛑 <b>Arrêt du bot</b>\n\nÊtes-vous sûr de vouloir arrêter le bot ?\n\n<b>Toutes vos données seront supprimées :</b>\n• Historique des conversations\n• Paramètres\n• Cache\n\nCette action ne peut pas être annulée !",
-      "success": "👋 <b>Bot arrêté</b>\n\nToutes les données ont été supprimées. Au revoir !\n\n😢 Nous sommes désolés de vous voir partir. Nous attendrons votre retour !",
-      "cancelled": "❌ Arrêt annulé"
+    "delete_me": {
+      "confirmation": "🗑️ <b>Suppression Complète des Données</b>\n\nÊtes-vous sûr de vouloir supprimer complètement toutes vos données ?\n\n<b>Seront supprimées DÉFINITIVEMENT :</b>\n• Historique des conversations\n• Paramètres\n• 💎 <b>Abonnement Premium</b>\n• Cache\n• Toutes les données personnelles\n\n⚠️ Cette action ne peut pas être annulée !",
+      "success": "👋 <b>Données Supprimées</b>\n\nToutes vos données ont été complètement supprimées du système.\n\n😢 Nous sommes désolés de vous voir partir. Nous attendrons votre retour !\n\n💡 Si vous voulez recommencer depuis le début, appuyez sur /start",
+      "cancelled": "❌ Suppression annulée"
     }
   },
   "consent": {
     "request": "Veuillez accepter la politique de confidentialité :",
     "agreed": "Merci pour votre accord ! Tu as {free_limit} messages gratuits par jour. Choisis le genre de ton compagnon :",
     "privacy_title": "🔐 Politique de confidentialité",
-    "privacy_text": "Votre texte de politique de confidentialité ici...\n\nVersion complète : https://yourwebsite.com/privacy"
+    "privacy_text": "🔒 Nous stockons uniquement les données nécessaires pour que le bot fonctionne correctement.\n\n📋 Plus de détails dans notre Politique de Confidentialité :\n\n🔗 https://mindlythica-neurivantis-ai-bot-priv.netlify.app"
   },
   "gender": {
     "choose": "Choisis le genre de ton compagnon :",
@@ -85,13 +85,15 @@
     "read_terms": "Lire les conditions d'utilisation",
     "read_disclaimer": "Lire l'avis de non-responsabilité",
     "choose_female": "Fille",
-    "choose_male": "Garçon",
+    "choose_male": "Mec",
     "buy_premium": "💳 Acheter Premium",
     "extend_premium": "💳 Prolonger Premium",
     "yes": "Oui",
     "no": "Non",
+    "yes_change": "Oui, changer le genre",
+    "cancel": "Annuler",
     "female": "Fille",
-    "male": "Garçon",
+    "male": "Mec",
     "back_to_help": "↩️ Retour à l'aide"
   },
   "persons": {
