--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -25,7 +25,7 @@
       "language_command": "/language - Язык",
       "quiz_command": "/quiz - Знакомство",
       "restart_command": "/restart - Перезапуск бота",
-      "stop_command": "/stop - Остановить бота",
+      "delete_me_command": "/delete_me - Полное удаление данных",
       "communication_title": "💬 Общение:",
       "free_limit": "• Бесплатно: {free_limit} сообщений в день",
       "premium_unlimited": "• Премиум: безлимитное общение.",
@@ -52,18 +52,18 @@
       "cancelled": "❌ Перезапуск отменен",
       "already_restarted": "⚠️ <b>Бот уже перезапущен</b>\n\nБот уже был перезапущен. Вам не нужно перезапускать его снова.\n\nЕсли хотите начать заново, просто отправьте сообщение для начала нового разговора!"
     },
-    "stop": {
-      "confirmation": "🛑 <b>Остановка бота</b>\n\nВы уверены, что хотите остановить бота?\n\n<b>Все ваши данные будут удалены:</b>\n• История переписки\n• Настройки\n• Кэш\n\nЭто действие нельзя отменить!",
-      "success": "👋 <b>Бот остановлен</b>\n\nВсе данные удалены. До свидания!\n\n😢 Нам жаль, что вы уходите. Мы будем ждать вашего возвращения!",
-      "cancelled": "❌ Остановка отменена",
-      "already_stopped": "⚠️ <b>Бот уже остановлен</b>\n\nБот уже был остановлен. Вам не нужно останавливать его снова.\n\nЕсли хотите начать использовать бота, просто отправьте сообщение или используйте команду /start!"
+    "delete_me": {
+      "confirmation": "🗑️ <b>Полное удаление данных</b>\n\nВы уверены, что хотите полностью удалить все свои данные?\n\n<b>Будут удалены БЕЗВОЗВРАТНО:</b>\n• История переписки\n• Настройки\n• 💎 <b>Подписка Premium</b>\n• Кэш\n• Все персональные данные\n\n⚠️ Это действие нельзя отменить!",
+      "success": "👋 <b>Данные удалены</b>\n\nВсе ваши данные полностью удалены из системы.\n\n😢 Нам жаль, что вы уходите. Мы будем ждать вашего возвращения!\n\n💡 Если вы захотите начать с самого начала, нажмите /start",
+      "cancelled": "❌ Удаление отменено",
+      "already_stopped": "⚠️ <b>Данные уже удалены</b>\n\nВаши данные уже были удалены из системы.\n\n💡 Если хотите начать использовать бота, нажмите /start"
     }
   },
   "consent": {
     "request": "Пожалуйста, согласись с политикой конфиденциальности:",
     "agreed": "Спасибо за согласие! У тебя {free_limit} бесплатных сообщений в день. Выбери пол компаньона:",
     "privacy_title": "🔐 Политика конфиденциальности",
-    "privacy_text": "Здесь ваш текст политики конфиденциальности...\n\nПолная версия: https://yourwebsite.com/privacy"
+    "privacy_text": "🔒 Мы храним только необходимые данные, чтобы бот работал корректно.\n\n📋 Подробнее — в нашей Политике конфиденциальности:\n\n🔗 https://mindlythica-neurivantis-ai-bot-priv.netlify.app"
   },
   "gender": {
     "choose": "Выбери пол компаньона:",
@@ -190,9 +190,9 @@
     "read_terms": "Читать соглашение",
     "read_disclaimer": "Читать отказ от ответственности",
     "choose_female": "Девушка 😊",
-    "choose_male": "Молодой человек 😉",
+    "choose_male": "Парень 😉",
     "female": "Девушка 😊",
-    "male": "Молодой человек 😉",
+    "male": "Парень 😉",
     "buy_premium": "💳 Купить премиум",
     "extend_premium": "💳 Продлить премиум",
     "pay": "💳 Оплатить",
