--- a/locales/sr/translations.json
+++ b/locales/sr/translations.json
@@ -48,13 +48,15 @@
     },
     "restart": {
       "confirmation": "🔄 <b>Рестарт бота</b>\n\nДа ли сте сигурни да желите рестартовати бота?\n\n<b>Сви ваши подаци ће бити обрисани:</b>\n• Историја ћаскања\n• Подешавања\n• Кеш\n\nМолимо, потврдите ову радњу.",
-      "success": "✅ <b>Бот рестартован!</b>\n\nСви подаци обрисани. Почињемо поново...",
-      "cancelled": "❌ Рестарт отказан"
+      "success": "✅ <b>Бот рестартован!</b>\n\nСви подаци обрисани. Почињемо изнова...",
+      "cancelled": "❌ Рестарт отказан",
+      "already_restarted": "⚠️ <b>Бот већ рестартован</b>\n\nБот је већ рестартован. Не морате га поново рестартовати.\n\nАко желите да почнете изнова, само пошаљите поруку да бисте започели нови разговор!"
     },
     "delete_me": {
       "confirmation": "🗑️ <b>Потпуно Брисање Података</b>\n\nДа ли сте сигурни да желите потпуно обрисати све своје податке?\n\n<b>Биће обрисани ТРАЈНО:</b>\n• Историја ћаскања\n• Подешавања\n• 💎 <b>Премијум Претплата</b>\n• Кеш\n• Сви лични подаци\n\n⚠️ Ова радња се не може опозвати!",
       "success": "👋 <b>Подаци Обрисани</b>\n\nСви ваши подаци су потпуно обрисани из система.\n\n😢 Жао нам је што одлазите. Чекаћемо ваш повратак!\n\n💡 Ако будете хтели да почнете испочетка, притисните /start",
-      "cancelled": "❌ Брисање отказано"
+      "cancelled": "❌ Брисање отказано",
+      "already_stopped": "⚠️ <b>Подаци већ обрисани</b>\n\nВаши подаци су већ обрисани из система.\n\n💡 Ако желите да почнете да користите бота, притисните /start"
     }
   },
   "consent": {
