--- a/locales/it/translations.json
+++ b/locales/it/translations.json
@@ -48,13 +48,15 @@
     },
     "restart": {
       "confirmation": "🔄 <b>Riavvio del bot</b>\n\nSei sicuro di voler riavviare il bot?\n\n<b>Tutti i tuoi dati saranno eliminati:</b>\n• Cronologia delle conversazioni\n• Impostazioni\n• Cache\n\nPer favore, conferma questa azione.",
-      "success": "✅ <b>Bot riavviato!</b>\n\nTutti i dati sono stati cancellati. Ricominciamo...",
-      "cancelled": "❌ Riavvio annullato"
+      "success": "✅ <b>Bot riavviato!</b>\n\nTutti i dati eliminati. Ricominciamo...",
+      "cancelled": "❌ Riavvio annullato",
+      "already_restarted": "⚠️ <b>Bot già riavviato</b>\n\nIl bot è già stato riavviato. Non devi riavviarlo di nuovo.\n\nSe vuoi ricominciare, invia semplicemente un messaggio per iniziare una nuova conversazione!"
     },
     "delete_me": {
       "confirmation": "🗑️ <b>Eliminazione Completa dei Dati</b>\n\nSei sicuro di voler eliminare completamente tutti i tuoi dati?\n\n<b>Saranno eliminati PERMANENTEMENTE:</b>\n• Cronologia delle conversazioni\n• Impostazioni\n• 💎 <b>Abbonamento Premium</b>\n• Cache\n• Tutti i dati personali\n\n⚠️ Questa azione non può essere annullata!",
       "success": "👋 <b>Dati Eliminati</b>\n\nTutti i tuoi dati sono stati completamente eliminati dal sistema.\n\n😢 Ci dispiace vederti andare via. Aspetteremo il tuo ritorno!\n\n💡 Se vorrai ricominciare dall'inizio, premi /start",
-      "cancelled": "❌ Eliminazione annullata"
+      "cancelled": "❌ Eliminazione annullata",
+      "already_stopped": "⚠️ <b>Dati già eliminati</b>\n\nI tuoi dati sono già stati eliminati dal sistema.\n\n💡 Se vuoi iniziare a usare il bot, premi /start"
     }
   },
   "consent": {
