--- a/locales/pl/translations.json
+++ b/locales/pl/translations.json
@@ -48,13 +48,15 @@
     },
     "restart": {
       "confirmation": "🔄 <b>Ponowne uruchomienie bota</b>\n\nCzy na pewno chcesz ponownie uruchomić bota?\n\n<b>Wszystkie Twoje dane zostaną usunięte:</b>\n• Historia rozmów\n• Ustawienia\n• Cache\n\nProszę potwierdzić tę akcję.",
-      "success": "✅ <b>Bot ponownie uruchomiony!</b>\n\nWszystkie dane zostały wyczyszczone. Zaczynamy od nowa...",
-      "cancelled": "❌ Ponowne uruchomienie anulowane"
+      "success": "✅ <b>Bot ponownie uruchomiony!</b>\n\nWszystkie dane usunięte. Rozpoczynamy od nowa...",
+      "cancelled": "❌ Ponowne uruchomienie anulowane",
+      "already_restarted": "⚠️ <b>Bot już ponownie uruchomiony</b>\n\nBot został już ponownie uruchomiony. Nie musisz go ponownie uruchamiać.\n\nJeśli chcesz zacząć od nowa, po prostu wyślij wiadomość, aby rozpocząć nową rozmowę!"
     },
     "delete_me": {
       "confirmation": "🗑️ <b>Pełne Usunięcie Danych</b>\n\nCzy na pewno chcesz całkowicie usunąć wszystkie swoje dane?\n\n<b>Zostaną usunięte NA ZAWSZE:</b>\n• Historia rozmów\n• Ustawienia\n• 💎 <b>Subskrypcja Premium</b>\n• Cache\n• Wszystkie dane osobowe\n\n⚠️ Ta akcja nie może być cofnięta!",
       "success": "👋 <b>Dane Usunięte</b>\n\nWszystkie Twoje dane zostały całkowicie usunięte z systemu.\n\n😢 Szkoda, że odchodzisz. Będziemy czekać na Twój powrót!\n\n💡 Jeśli będziesz chciał zacząć od nowa, naciśnij /start",
-      "cancelled": "❌ Usuwanie anulowane"
+      "cancelled": "❌ Usuwanie anulowane",
+      "already_stopped": "⚠️ <b>Dane już usunięte</b>\n\nTwoje dane zostały już usunięte z systemu.\n\n💡 Jeśli chcesz zacząć używać bota, naciśnij /start"
     }
   },
   "consent": {
